5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1573_1332.log
== TEST (2019-03-11 15:30:13) 
-- CODE:
aresta = 3/2√3a
area = 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta = 3/2√3a
                  ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:32:23) 
-- CODE:
aresta = 5
area = 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:36:47) 
-- CODE:
aresta = 5
area = 
 
print(round(3/2 (5)**2, 4))

-- ERROR:
File "XXXX", line 2
    area = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:37:32) 
-- CODE:
aresta = 5
area = 
 
print(round(3/2 (3)**0.5, 4))

-- ERROR:
File "XXXX", line 2
    area = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:37:41) 
-- CODE:
aresta = 5
area = 2
 
print(round(3/2 (3)**0.5, 4))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(3/2 (3)**0.5, 4))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:38:19) 
-- CODE:
aresta = 5
area = 
 
print(round(3/2(3)**0.5(5 ** 2), 4))

-- ERROR:
File "XXXX", line 2
    area = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:38:34) 
-- CODE:
aresta = 5
 
print(round(3/2(3)**0.5(5 ** 2), 4))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(3/2(3)**0.5(5 ** 2), 4))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:39:00) 
-- CODE:
aresta = 5
area = 
	
print(round(3/2 (3)**0.5 (5 ** 2), 4))

-- ERROR:
File "XXXX", line 2
    area = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:42:55) 
-- CODE:
aresta = 
area = 5
 
print(round(area, 4))

-- ERROR:
File "XXXX", line 1
    aresta = 
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:44:01) 
-- CODE:
aresta = 5
area = print(3/2)
 
print(round(area, 4))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4))
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:46:09) 
-- CODE:
aresta = 5
area = 3/2 (3)**0.5 5 ** 2
 
print(round(area, 4))

-- ERROR:
File "XXXX", line 2
    area = 3/2 (3)**0.5 5 ** 2
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:46:30) 
-- CODE:
aresta = 5
area = print(3/2 (3)**0.5 5 ** 2)
 
print(round(area, 4))

-- ERROR:
File "XXXX", line 2
    area = print(3/2 (3)**0.5 5 ** 2)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:46:48) 
-- CODE:
aresta = 5
area = 
 
print(round((3/2 (3)**0.5 5 ** 2), 4))

-- ERROR:
File "XXXX", line 2
    area = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:46:57) 
-- CODE:
aresta = 5
area = (3/2 (3)**0.5 5 ** 2)
 
print(round((3/2 (3)**0.5 5 ** 2), 4))

-- ERROR:
File "XXXX", line 2
    area = (3/2 (3)**0.5 5 ** 2)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:48:14) 
-- CODE:
aresta = 5
area = (3/2 (3)**0.5 5 ** 2)
 
print(round(area, 4))

-- ERROR:
File "XXXX", line 2
    area = (3/2 (3)**0.5 5 ** 2)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:48:23) 
-- CODE:
aresta = 5
area = print(3/2 (3)**0.5 5 ** 2)
 
print(round(area, 4))

-- EXECUTION TIME:
0.156487
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 2
    area = print(3/2 (3)**0.5 5 ** 2)
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:49:00) 
-- CODE:
aresta = 5
area = print(3//2 (3)**0.5 5 ** 2)
 
print(round(area, 4))

-- ERROR:
File "XXXX", line 2
    area = print(3//2 (3)**0.5 5 ** 2)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:50:11) 
-- CODE:
aresta = 5
area = 
 
print(round(area, 4))

-- ERROR:
File "XXXX", line 2
    area = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:50:57) 
-- CODE:
aresta = 5
area = A= 3/2*(3)**0.5*5**2
 
print(round(area, 4))

-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:51:26) 
-- CODE:
aresta = 5
area = A= 3/2*(3)**0.5*5**2
 
print(round(area, 4))

-- EXECUTION TIME:
0.218569
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
